Add icons to my strength list

--- a/about.html
+++ b/about.html
@@ -71,22 +71,28 @@
                     <p>The Diploma in Full Stack Software Development (E-commerce Applications) from Code Institute has
                         been credit-rated by the University of the West of Scotland at level 8 on the Scottish Credit &
                         Qualifications Framework with 60 SCQF credit points.</p><br>
-                    <ol><li class="title">It's a great idea to have me in your company because I am:</li>
-                        <li><img src="assets/images/check-mark.png" alt="check mark"> a hardworking person</li>
-                        <li><img src="assets/images/check-mark.png" alt="check mark"> eager to set myself new challenges
+                    <ol><li class="title">My strength:</li>
+                        <li><img src="assets/images/check-mark.png" alt="check mark"> 💪 I'm a hardworking person</li>
+                        <li><img src="assets/images/check-mark.png" alt="check mark">👩‍💻 I'm eager to set myself new challenges
                         </li>
-                        <li><img src="assets/images/check-mark.png" alt="check mark"> highly disciplined and organised
+                        <li><img src="assets/images/check-mark.png" alt="check mark"> 🗂 I'm highly disciplined and organized
+
                         </li>
-                        <li><img src="assets/images/check-mark.png" alt="check mark"> strongly focused on learning new
-                            skills and diving into new technologies</li>
-                        <li><img src="assets/images/check-mark.png" alt="check mark"> great at working together with a
-                            team</li>
-                        <li><img src="assets/images/check-mark.png" alt="check mark"> strongly focused on code quality</li>
+                        <li><img src="assets/images/check-mark.png" alt="check mark"> 📚 I'm strongly focused on learning new skills and diving into new technologies
+                        </li>
+                        <li><img src="assets/images/check-mark.png" alt="check mark">👱🧑 I'm great at working with a team
+                        </li>
+                        <li><img src="assets/images/check-mark.png" alt="check mark"> 🔎 I'm strongly focused on code quality
+                        </li>
                         <li class="title">... and except that I am also:</li>
-                        <li><img src="assets/images/check-mark.png" alt="check mark"> a geek person (I can't resist the movie gadgets)</li>
-                        <li><img src="assets/images/check-mark.png" alt="check mark">  a gamer (World of Warcraft - my favourite 🖤)</li>
-                        <li><img src="assets/images/check-mark.png" alt="check mark">  a big fan of a healthy lifestyle</li>
-                        <li><img src="assets/images/check-mark.png" alt="check mark"> a huge fan of 80s music and movies</li>
+                        <li><img src="assets/images/check-mark.png" alt="check mark"> 🎞 a geek person (I can't resist the movie gadgets)
+                        </li>
+                        <li><img src="assets/images/check-mark.png" alt="check mark"> 🎮 a gamer (World of Warcraft - my favourite 🖤)
+                        </li>
+                        <li><img src="assets/images/check-mark.png" alt="check mark"> 🍎 a big fan of a healthy lifestyle
+                        </li>
+                        <li><img src="assets/images/check-mark.png" alt="check mark"> 💾 a huge fan of 80s and 90s music and movies
+                        </li>
                     </ol><br>
                     <p>My biggest dream? To find a job in a supportive company and become a part of a professional team where I could further develop my programming skills.</p>
                     <a id="download" class="cv" href="assets/images/Izabela_Krupinska_CV.pdf"
