Update linkedin link

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </nav>
         <main id="home" class="content">
             <div class="soc-icons">
-                <a target="_blank" href="https://www.linkedin.com/in/izabela-krupinska-161a351a5"><img id="soc-linkedin"
+                <a target="_blank" href="https://www.linkedin.com/in/%F0%9F%91%A9%E2%80%8D%F0%9F%92%BBizabela-krupinska-161a351a5/"><img id="soc-linkedin"
                         class="soc-link linkedin-link" src="assets/images/linkedin.svg" alt="linkedin logo"></a>
                 <a target="_blank" href="https://github.com/Izabela88"><img id="soc-github" class="soc-link github-icon"
                         src="assets/images/icons8-github.svg" alt="github logo"></a>
