Update my projects section

--- a/index.html
+++ b/index.html
@@ -25,16 +25,18 @@
 
 <body>
     <!-- intro -->
-        <div class="intro">
-            <div class="intro-text">
-                <div class="hide">
-                    <div class="intro-img"><img src="./assets/images/jelly-the-character-looks-through-the-spyglass-of-the-stars-and-planets.gif" alt=""></div>
-                </div>
-                <h1 class="hide">
-                    <span class="text">don't stop dreaming</span>
-                </h1>
+    <div class="intro">
+        <div class="intro-text">
+            <div class="hide">
+                <div class="intro-img"><img
+                        src="./assets/images/jelly-the-character-looks-through-the-spyglass-of-the-stars-and-planets.gif"
+                        alt=""></div>
             </div>
+            <h1 class="hide">
+                <span class="text">don't stop dreaming</span>
+            </h1>
         </div>
+    </div>
 
     <!-- https://codepen.io/CiTA/pen/bgjKKE   -->
     <!-- menu -->
@@ -65,8 +67,10 @@
         </nav>
         <main id="home" class="content">
             <div class="soc-icons">
-                <a target="_blank" href="https://www.linkedin.com/in/%F0%9F%91%A9%E2%80%8D%F0%9F%92%BBizabela-krupinska-161a351a5/"><img id="soc-linkedin"
-                        class="soc-link linkedin-link" src="assets/images/linkedin.svg" alt="linkedin logo"></a>
+                <a target="_blank"
+                    href="https://www.linkedin.com/in/%F0%9F%91%A9%E2%80%8D%F0%9F%92%BBizabela-krupinska-161a351a5/"><img
+                        id="soc-linkedin" class="soc-link linkedin-link" src="assets/images/linkedin.svg"
+                        alt="linkedin logo"></a>
                 <a target="_blank" href="https://github.com/Izabela88"><img id="soc-github" class="soc-link github-icon"
                         src="assets/images/icons8-github.svg" alt="github logo"></a>
 
@@ -78,7 +82,7 @@
             <div class="container">
                 <div id="text" class="main-txt">
                     <p class="main-paragraph-one">Welcome beautiful people visiting my portfolio website!</p>
-                    <p  class="main-paragraph-two">I'm Izabela - Junior Software Developer</p>
+                    <p class="main-paragraph-two">I'm Izabela - Junior Software Developer</p>
                     <div class="main-links">
                         <a class="link-one" href="#projects">my projects</a>
                         <a class="link-two" href="about.html">about me</a>
@@ -127,94 +131,9 @@
     <section id="projects" class="section">
         <h2>my projects</h2>
         <div class="container">
+            <!-- https://codepen.io/katywellington91/pen/PoGVzwZ -->
             <div class="projects-container">
                 <div>
-                    <div class="card">
-                        <div class="imgBx">
-                            <img src="assets/images/jelly-blue-ball-character.png">
-                        </div>
-                        <div class="contentBx">
-                            <h3>mt elevators</h3>
-                            <a target="_blank" class="live-link" href="https://mt-elevators.netlify.app/">live
-                                website</a>
-                            <a target="_blank" class="github-link"
-                                href="https://github.com/Izabela88/mt-elevators">github</a>
-                        </div>
-                        <div class="info-card" tabindex="0">
-                            <span class="card__infoicon">
-                                <img src="assets/images/desktop.svg" alt="monitor icon">
-                            </span>
-                            <p class="card__description">desktop only</p>
-                        </div>
-                    </div>
-
-                </div>
-                <!-- https://codepen.io/katywellington91/pen/PoGVzwZ -->
-                <div>
-                    <div class="card">
-                        <div class="imgBx">
-                            <img src="assets/images/jelly-red-one-eyed-character-in-blue-jumpsuit.png">
-                        </div>
-                        <div class="contentBx">
-                            <h3>dog inn</h3>
-                            <a target="_blank" class="live-link" href="https://izabela88.github.io/dog-inn/">live
-                                website</a>
-                            <a target="_blank" class="github-link"
-                                href="https://github.com/Izabela88/dog-inn">github</a>
-                        </div>
-                        <div class="info-card" tabindex="0">
-                            <span class="card__infoicon">
-                                <img src="assets/images/responsive.svg" alt="monitor icon">
-                            </span>
-                            <p class="card__description">responsive on all devices</p>
-                        </div>
-                    </div>
-
-                </div>
-                <div>
-                    <div class="card">
-                        <div class="imgBx">
-                            <img src="assets/images/jelly-the-chef-completed-the-order-and-brought-the-dish.png">
-                        </div>
-                        <div class="contentBx">
-                            <h3>cupandcake</h3>
-                            <a target="_blank" class="live-link" href="https://izabela88.github.io/cupandcake/">live
-                                website</a>
-                            <a target="_blank" class="github-link"
-                                href="https://github.com/Izabela88/cupandcake">github</a>
-                        </div>
-                        <div class="info-card" tabindex="0">
-                            <span class="card__infoicon">
-                                <img src="assets/images/responsive.svg" alt="monitor icon">
-                            </span>
-                            <p class="card__description">responsive on all devices</p>
-                        </div>
-                    </div>
-
-                </div>
-                <div>
-
-                    <div class="card">
-                        <div class="imgBx">
-                            <img src="assets/images/jelly-black-character-with-a-long-arm.png">
-                        </div>
-                        <div class="contentBx">
-                            <h3>brainstorm quiz</h3>
-                            <a target="_blank" class="live-link" href="https://brainstorm-quiz-game.herokuapp.com/">live
-                                website</a>
-                            <a target="_blank" class="github-link"
-                                href="https://github.com/Izabela88/brainstorm-quiz">github</a>
-                        </div>
-                        <div class="info-card" tabindex="0">
-                            <span class="card__infoicon">
-                                <img src="assets/images/desktop.svg" alt="monitor icon">
-                            </span>
-                            <p class="card__description">desktop only</p>
-                        </div>
-                    </div>
-                </div>
-                <div>
-
                     <div class="card">
                         <div class="imgBx">
                             <img src="assets/images/jelly-yellow-one-eyed-character-with-a-tie-2.png">
@@ -235,7 +154,6 @@
                     </div>
                 </div>
                 <div>
-
                     <div class="card">
                         <div class="imgBx">
                             <img src="assets/images/jelly-red-one-eyed-character.png">
@@ -252,6 +170,86 @@
                                 <img src="assets/images/responsive.svg" alt="monitor icon">
                             </span>
                             <p class="card__description">responsive on all devices</p>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="card">
+                        <div class="imgBx">
+                            <img src="assets/images/jelly-black-character-with-a-long-arm.png">
+                        </div>
+                        <div class="contentBx">
+                            <h3>brainstorm quiz</h3>
+                            <a target="_blank" class="live-link" href="https://brainstorm-quiz-game.herokuapp.com/">live
+                                website</a>
+                            <a target="_blank" class="github-link"
+                                href="https://github.com/Izabela88/brainstorm-quiz">github</a>
+                        </div>
+                        <div class="info-card" tabindex="0">
+                            <span class="card__infoicon">
+                                <img src="assets/images/desktop.svg" alt="monitor icon">
+                            </span>
+                            <p class="card__description">desktop only</p>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="card">
+                        <div class="imgBx">
+                            <img src="assets/images/jelly-the-chef-completed-the-order-and-brought-the-dish.png">
+                        </div>
+                        <div class="contentBx">
+                            <h3>cupandcake</h3>
+                            <a target="_blank" class="live-link" href="https://izabela88.github.io/cupandcake/">live
+                                website</a>
+                            <a target="_blank" class="github-link"
+                                href="https://github.com/Izabela88/cupandcake">github</a>
+                        </div>
+                        <div class="info-card" tabindex="0">
+                            <span class="card__infoicon">
+                                <img src="assets/images/responsive.svg" alt="monitor icon">
+                            </span>
+                            <p class="card__description">responsive on all devices</p>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="card">
+                        <div class="imgBx">
+                            <img src="assets/images/jelly-red-one-eyed-character-in-blue-jumpsuit.png">
+                        </div>
+                        <div class="contentBx">
+                            <h3>dog inn</h3>
+                            <a target="_blank" class="live-link" href="https://izabela88.github.io/dog-inn/">live
+                                website</a>
+                            <a target="_blank" class="github-link"
+                                href="https://github.com/Izabela88/dog-inn">github</a>
+                        </div>
+                        <div class="info-card" tabindex="0">
+                            <span class="card__infoicon">
+                                <img src="assets/images/responsive.svg" alt="monitor icon">
+                            </span>
+                            <p class="card__description">responsive on all devices</p>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="card">
+                        <div class="imgBx">
+                            <img src="assets/images/jelly-blue-ball-character.png">
+                        </div>
+                        <div class="contentBx">
+                            <h3>mt elevators</h3>
+                            <a target="_blank" class="live-link" href="https://mt-elevators.netlify.app/">live
+                                website</a>
+                            <a target="_blank" class="github-link"
+                                href="https://github.com/Izabela88/mt-elevators">github</a>
+                        </div>
+                        <div class="info-card" tabindex="0">
+                            <span class="card__infoicon">
+                                <img src="assets/images/desktop.svg" alt="monitor icon">
+                            </span>
+                            <p class="card__description">desktop only</p>
                         </div>
                     </div>
                 </div>
