Restyle projects section

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                             <img src="assets/images/jelly-yellow-one-eyed-character-with-a-tie-2.png">
                         </div>
                         <div class="contentBx">
-                            <h3>walkers</h3>
+                            <h3>the walkers</h3>
                             <a target="_blank" class="live-link" href="https://walkers88.herokuapp.com/">live
                                 website</a>
                             <a target="_blank" class="github-link"
@@ -156,7 +156,7 @@
                 <div>
                     <div class="card">
                         <div class="imgBx">
-                            <img src="assets/images/jelly-red-one-eyed-character.png">
+                            <img src="assets/images/jelly-snail-closes-eyes.png">
                         </div>
                         <div class="contentBx">
                             <h3>norah's ceramics</h3>
