Change images size in projects section

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <div>
                     <div class="card">
                         <div class="imgBx">
-                            <img src="assets/images/jelly-black-character-with-a-long-arm.png">
+                            <img class="small-img" src="assets/images/jelly-black-character-with-a-long-arm.png">
                         </div>
                         <div class="contentBx">
                             <h3>brainstorm quiz</h3>
@@ -196,7 +196,7 @@
                 <div>
                     <div class="card">
                         <div class="imgBx">
-                            <img src="assets/images/jelly-the-chef-completed-the-order-and-brought-the-dish.png">
+                            <img class="small-img" src="assets/images/jelly-the-chef-completed-the-order-and-brought-the-dish.png">
                         </div>
                         <div class="contentBx">
                             <h3>cupandcake</h3>
@@ -216,7 +216,7 @@
                 <div>
                     <div class="card">
                         <div class="imgBx">
-                            <img src="assets/images/jelly-red-one-eyed-character-in-blue-jumpsuit.png">
+                            <img class="small-img" src="assets/images/jelly-red-one-eyed-character-in-blue-jumpsuit.png">
                         </div>
                         <div class="contentBx">
                             <h3>dog inn</h3>
@@ -236,7 +236,7 @@
                 <div>
                     <div class="card">
                         <div class="imgBx">
-                            <img src="assets/images/jelly-blue-ball-character.png">
+                            <img class="small-img" src="assets/images/jelly-blue-ball-character.png">
                         </div>
                         <div class="contentBx">
                             <h3>mt elevators</h3>
