Remove img from about section

--- a/about.html
+++ b/about.html
@@ -101,11 +101,11 @@
                 </div>
             </div>
         </div>
-        <div class="me-imgs">
+        <!-- <div class="me-imgs">
             <img class="me-img" src="assets/images/jelly-blue-character-in-a-tie-with-a-suitcase.svg" alt="Author picture">
             <img class="me-img-two" src="assets/images/jelly-lettering-hey.svg" alt="stars">
             <img class="me-img-three" src="assets/images/jelly-transparent-speech-bubble.svg" alt="Author picture">
-        </div>
+        </div> -->
 
     </section>
     <script src="assets/js/navbar.js"></script>
